# pipedantic

./: .pre-commit  README.md  Taskfile.yml  example-data  example-data-invalid  example.py  pyproject.toml
.github/workflows/: ci.yml
pipedantic/: __init__.py  utils.py
tests/: data  test_pipedantic.py  test_utils.py
